# apaulture

./: .dockerignore  .gitignore  CNAME  README.md  cleanse.sh  compose.yml  index.html  manage.py  package-lock.json  package.json  requirements.txt  venv.bat  vite.config.js  wrangler.jsonc
.github/workflows/: container-app-AutoDeployTrigger-e488435e-fa1e-47de-8369-c4a6443d1824.yml  container-app-autodeploy.yml  main_apaulture-portfolio.yml  main_apaulture-python-new.yml  main_apaulture.yml
apaulture/: asgi.py  azure_storage.py  prod.py  production.py  settings.py  urls.py  wsgi.py
apaulture/settings/: dev.py  prod.py
app/: Dockerfile  manage.py
app/apaulture/: urls.py  wsgi.py
app/apaulture/settings/: base.py  dev.py  prod.py
app/portfolio/: models.py  urls.py  views.py
app/portfolio/migrations/: 0001_initial.py
app/portfolio/templatetags/: conversions.py
app/requirements/: dev.txt  prod.txt  pyproject.toml
app/scripts/: data_migration.py
app/static/css/: main.css
app/static/js/functions/: effects.js
app/templates/: 403.html  404.html  405.html  base.html
app/templates/components/: nav.html  subbranches.html
app/templates/contexts/: base.html  page.html
app/templates/portfolio/: apaulture.html  devops.html  fullstack.html  index.html  ui＋ux.html
app/templates/utils/: statics.html
docs/azure/: storage.md
nginx/: Dockerfile  apaulture  nginx.conf
portfolio/: views.py
requirements/: dev.txt  prod.txt
src/: App.jsx
static/bs/css/: bootstrap.css
static/css/: main.css
templates/: base.html
templates/portfolio/: index.html
