# pip-compile --generate-hashes --allow-unsafe pyproject.toml -o requirements/<environment>.txt --extra <environment>

[project]
name = "Apaulture"
version = "1"
dependencies = [
    "django",
    "psycopg2-binary",
    "python-dotenv",
    "django-extensions",
    "pip-tools",
    "sqlparse >= 0.5.0" # To satisfy CVE-2024-4340 bruh
]

[project.optional-dependencies]
prod = [
    "whitenoise"
]

dev = []